2009-08-17  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.DesignerSupport.Toolbox/ToolboxItemToolboxLoader.cs:
	  Track api changes.

2009-08-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.DesignerSupport/ToolboxService.cs:
	* MonoDevelop.DesignerSupport.Toolbox/ToolboxItemToolboxLoader.cs:
	  Use the new AssemblyContext class to query and resolve
	  assemblies.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic: Flush.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/MonoDevelop.DesignerSupport.Toolbox.ComponentSelectorDialog.cs:
	  Flush.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.DesignerSupport.Toolbox/IToolboxLoader.cs: Track
	  api changes.

2009-07-24  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.DesignerSupport.Projects/SolutionItemDescriptor.cs:
	* MonoDevelop.DesignerSupport.Projects/WorkspaceItemDescriptor.cs:
	  Use the new api for renaming projects and solutions.

2009-07-21  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.DesignerSupport.csproj:
	* MonoDevelop.DesignerSupport.PropertyGrid:
	* MonoDevelop.DesignerSupport/PropertyPad.cs:
	* MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs:
	* MonoDevelop.DesignerSupport.PropertyGrid.Editors:
	* MonoDevelop.DesignerSupport/PropertyPadVisitor.cs:
	* MonoDevelop.DesignerSupport/IPropertyPadProvider.cs:
	* MonoDevelop.DesignerSupport/DesignerSupportService.cs:
	* MonoDevelop.DesignerSupport.PropertyGrid/PropertyGrid.cs:
	* MonoDevelop.DesignerSupport.PropertyGrid/EditorManager.cs:
	* MonoDevelop.DesignerSupport.PropertyGrid.Editors/IntRange.cs:
	* MonoDevelop.DesignerSupport.Projects/ComponentNodeBuilder.cs:
	* MonoDevelop.DesignerSupport.PropertyGrid/PropertyGridTree.cs:
	* MonoDevelop.DesignerSupport.PropertyGrid/EventPropertyTab.cs:
	* icons/MonoDevelop.DesignerSupport.PropertyGrid.SortByCat.png:
	* MonoDevelop.DesignerSupport.Projects/ProjectFileDescriptor.cs: