@@ -1,3 +1,8 @@
+2009-08-20  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.DesignerSupport/CodeBehind.cs: Fix checking for
+	  parent - don't return nonexistent file.
+
 2009-08-17  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.DesignerSupport.Toolbox/ToolboxItemToolboxLoader.cs:
